--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,102 @@
-.App {
+body{
+  background: rgb(236, 174, 3);
+}
+.counterCss{
+
+  max-width: 500px;
+  border-color: aquamarine;
+  background-color: rgb(232, 228, 241);
+  margin: 30px auto;
+  overflow: auto;
+  min-height: 200px;
+  border: 1px solid steelblue;
+  padding: 30px;
+  border-radius: 10px;
+}
+.center{
+  margin-left: 150px;
+  
+}
+#incrementbutton{
+  margin-left: 150px;
+  background-color: crimson;
+  border-radius: 15px;
+  font-size: 20px;
+}
+#decrementbutton{
+  margin-left: 150px;
+  background-color: cyan;
+  border-radius: 15px;
+  font-size: 20px;
+}
+#followButton{
+  margin-left: 150px;
+  border-radius: 50px;
+  font-size: 30px;
+  
+  border-width: 8px;
+  font-style: italic;
+}
+#unfollowButton{
+  margin-left: 150px;
+  border-radius: 50px;
+  font-size: 30px;
+ 
+  border-width: 8px;
+  font-style: italic;
+}
+.TaskTrackerCss{
+  max-width: 600px;
+  border-color: aquamarine;
+  background-color: rgb(48, 48, 49);
+  margin: 25px auto;
+  overflow: auto;
+  min-height: 400px;
+  border: 5px solid rgb(4, 145, 98);
+  border-radius: 10px;
+  padding: 30px;
+  border-radius: 10px;
+  color: azure;
+  font-family: cursive;
   text-align: center;
+  
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#taskinput{
+  margin-left: 2px;
+  text-align: left;
+  
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#crosIcon{
+  height: 20px;
+  margin-left: 100px;
+  padding-top: 5px;
+  color: rgb(219, 55, 33);
+  cursor: pointer;
+  text-align:left
+   
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#taskshow{
+  font-family: 'Courier New', Courier, monospace;
+  border: solid  rgb(1, 146, 13) 1px;
+  border-radius: 10px;
+  text-align:center;
+  padding-top:5px;
+  /* width: 100%;
+  height: 40px;
+  margin: 5px;
+  padding: 3px 7px; */
+  font-size: 15px;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#btn {
+  
+  background: rgb(34, 6, 160);
+  color: azure;
+  border: 5px;
+  padding: 10px 20px;
+  margin: 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: 12px;
+  
+  
 }
